<resources>
    <string name="app_name">Weather Observer</string>
    <string name="select_user">You need to add or select a user email.</string>
    <string name="user_title">User</string>
    <string name="city_title">City</string>
    <string name="find_create_user">Digit to find user email or create a new one</string>
    <string name="add_user">Click to add current email</string>
    <string name="add_cities">Add cities to show current weather here or pull to refresh</string>
    <string name="type_search_city">Type to search city</string>
    <string name="city_item">City: </string>
    <string name="state_item">State: </string>
    <string name="contry_item">Country: </string>
    <string name="city_added">City added/updated to your list</string>
    <string name="city_error">An error trying to add/update city occurred</string>
    <string name="city_updated">City updated</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">Ok</string>
    <string name="update_city">Update city</string>
    <string name="add_city">Add city</string>
    <string name="start_window">Observe from:</string>
    <string name="end_window">Observe until:</string>
    <string name="email_not_valid">Invalid email format</string>
    <string name="weather_observation">Observation time: </string>
    <string name="weather_observation_period">Observation period: </string>
    <string name="unauthorized">The allowed number of requests has been exceeded.</string>

    // Weather
    <string name="sunny">Sunny</string>
    <string name="m_sunny">Mostly Sunny</string>
    <string name="p_sunny">Partly Sunny</string>
    <string name="i_clouds">Intermittent Clouds</string>
    <string name="h_sunshine">	Hazy Sunshine</string>
    <string name="m_cloudy">Mostly Cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="dreary">Dreary (Overcast)</string>
    <string name="fog">Fog</string>
    <string name="showers">Showers</string>
    <string name="m_cloudy_showers">Mostly Cloudy w/ Showers</string>
    <string name="p_sunny_showers">Partly Sunny w/ Showers</string>
    <string name="t_storms">T-Storms</string>
    <string name="m_cloudy_storms">Mostly Cloudy w/ T-Storms</string>
    <string name="p_sunny_storms">Partly Sunny w/ T-Storms</string>
    <string name="rain">Rain</string>
    <string name="flurries">Flurries</string>
    <string name="m_cloudy_flurries">Mostly Cloudy w/ Flurries</string>
    <string name="p_sunny_flurries">Partly Sunny w/ Flurries</string>
    <string name="snow">Snow</string>
    <string name="m_cloudy_snow">Mostly Cloudy w/ Snow</string>
    <string name="ice">Ice</string>
    <string name="sleet">Sleet</string>
    <string name="f_rain">Freezing Rain</string>
    <string name="rain_snow">Rain and Snow</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="windy">Windy</string>
    <string name="clear">Clear</string>
    <string name="m_clear">Mostly Clear</string>
    <string name="p_cloudy">Partly Cloudy</string>
    <string name="h_moonlight">Hazy Moonlight</string>
    <string name="p_cloudy_showers">Partly Cloudy w/ Showers</string>
    <string name="p_cloudy_storms">Partly Cloudy w/ T-Storms</string>
</resources>